z-index problem solved : header style policy modified

--- a/static/scss/component.scss
+++ b/static/scss/component.scss
@@ -616,7 +616,69 @@ news{
     }
   }
 }
+/* news card style in modal context */
+.modal-dialog{
+    $height:340px;
+    news{
+        .card{
+            &.card-default{
+                display: flex;
+                flex-direction: row;
+                width: 720px;
+                max-height: $height;
+                min-height: 200px;
+                .title{
+                    display: flex;
+                    flex-direction: column;
+                    width: 80px;
+                    flex-shrink: 0;
+                    margin-right: 0;
+                    text-align: right;
+                }
+                .news-info{
+                    position: relative;
+                    width: auto;
+                    left:0;
+                    margin-top:10px;
+                }
+                .body{
+                    max-height: $height;
+                    overflow: auto;
+                    flex-grow: 1;
+                }
+                .comments{
+                    width: 180px;
+                    flex-shrink: 0;
+                    padding: 8px 10px;
+                    display: flex;
+                    flex-direction: column;
+                    >ul{
+                        width: 100%;
+                        overflow: auto;
+                        flex-grow: 1;
+                    }
+                    .comment{
+                        .area-reply{
+                            padding-left: 10px;
+                        }
+                    }
+                    .comment-input{
+                        width: 100%;
+                        max-height: 40px;
+                        flex-shrink: 0;
+                        align-self: flex-end;
+                        display: flex;
+                        .sin-editor-inline{
+                            flex-grow: 1;
+                            overflow: hidden;
 
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
 
 .typeahead {
   left: 0;
@@ -722,7 +784,6 @@ news{
     background: none;
   }
 }
-
 .modal {
   @import "base.scss";
   position: fixed;
@@ -734,16 +795,13 @@ news{
     position: fixed;
     top: 30%;
     left: 50%;
-    width: $width;
-    height: 200px;
-    margin-left: -$width/2;
+    min-width: $width;
+    transform: translate(-50%);
     background: white;
-    padding: 15px 20px;
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
     border-radius: 2px;
     border-bottom: 2px solid #e1e1e7;
-    text-align: center;
     .modal-title {
       height: 100px;
     }
@@ -759,9 +817,6 @@ news{
     transition: opacity .15s ease-out;
     &.in {
       opacity: 1;
-      .modal-dialog {
-        transform: scale(1);
-      }
     }
   }
   &.danger {
@@ -788,6 +843,9 @@ news{
       width: 100%;
       height: 100%;
       margin-left:0;
+      padding: 15px 20px;
+      transform: translate(0%);
+      text-align: center;
       .modal-content {
         height: 100%;
         header {
