--- a/static/scss/layout.scss
+++ b/static/scss/layout.scss
@@ -1,16 +1,18 @@
 $header-z : 1000;
 $nav-z : 999;
+$criticalWidth : 1280px;
+$searchResultWidth : 400px;
 body{
 	background :#f1f1f1;
 	overflow-x: hidden;
 }
-#body{
-	// position: relative;
-}
-@media all and (min-width:968px){	
+@media all and (min-width:$criticalWidth){
 	#content-area{
 		margin-right: 100px;
 	}
+}
+@mixin subtract-fixed-size($reduce){
+	width: calc(100% - #{$reduce});
 }
 #header{
 	position: fixed;
@@ -25,13 +27,24 @@ body{
 	line-height : 30px;
 	z-index:$header-z;
 	font-size: 18px;
+	#header-wrapper{
+		display: flex;
+		justify-content: space-between;
+		margin-left:400px;
+	}
+	&.enter-searchResult{
+		@extend .state-searchResult;
+		#header-wrapper{
+			margin-left:0;
+		}
+	}
 	#searchBar-wrap{
-		float: right;
+		float: left;
 		position: relative;
 		margin-right: 500px;
 		margin-top: 4px;
 		max-width: 300px;
-		width: calc(100% - 400px);
+		width: calc(100% - 300px);
 		color: white;
 		#searchBar{
 			border: none;
@@ -54,7 +67,7 @@ body{
 			line-height: 1.4;
 		}
 	}
-	ul{
+	#glb{
 		float: right;
 		li{
 			a{
@@ -83,7 +96,7 @@ body{
 		}
 	}
 }
-@media (max-width:950px){
+@media (max-width:$criticalWidth){
 	#header{
 		ul{
 			margin-right:100px;
@@ -143,14 +156,12 @@ body{
 }
 
 #content-area{
-	height: 100%;
 	padding:50px 0 0 0;
 	background: #f1f1f1;
 	>#main{
 		position:relative;
 		width: 600px;
-		margin: 20px 40px;
-		float: right;
+		margin: 20px auto;
 		-webkit-user-select: none;
 	}
 	>#sub{
@@ -211,12 +222,12 @@ body{
 		}
 	}
 	&.ng-enter {
-		transform: scale(0.8);
+		transform: translateY(50px);
 		opacity: 0;
 		transition: all 1s;
 		&.ng-enter-active {
-			transform: scale(1);
 			opacity: 1;
+			transform: translateY(0);
 		}
 	}
 }
@@ -226,7 +237,7 @@ body{
 	height: 100%;
 	left: 0;
 	top:0;
-	z-index: 1000;
+	z-index: $nav-z;
 	background: #fff;
 	header{
 		background: #4183d7;
@@ -234,6 +245,9 @@ body{
 		text-align: center;
 		line-height: 50px;
 		color: white;
+        &.loading{
+            background: #84B7F9;
+        }
 	}
 	aside{
 		float: left;
@@ -256,7 +270,8 @@ body{
 			&.fold{
 				height: 96px;
 			}
-			&:hover{
+			&:hover,
+			&.selected{
 				background: #f1f1f5;
 				&:before{
 					position: absolute;
@@ -271,10 +286,23 @@ body{
 			}
 		}
 	}
+    .search-detail{
+        position: fixed;
+		.enter-searchResult{
+			@extend .state-searchResult;
+			background-color: rgba(100,100,100,0.5);
+		}
+    }
 }
-@media (max-width:968px){
+.state-searchResult{
+	@include subtract-fixed-size($searchResultWidth);
+	left: auto;
+	right: 0;
+}
+@media (max-width:$criticalWidth){
+	$nav-width: 80px;
 	#main-nav{
-		width: 80px;
+		width: $nav-width;
 		li{
 			text-align:center;
 			.icon{
@@ -288,6 +316,11 @@ body{
 	#header{
 		#searchBar-wrap{
 			margin-right: 0;
+		}
+	}
+	#content-area{
+		>#main{
+			left: $nav-width;
 		}
 	}
 }
